--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@clerk/elements": "^0.17.1",
+    "@clerk/nextjs": "^6.0.2",
+    "@clerk/themes": "^2.1.39",
+    "@neondatabase/serverless": "^0.10.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.35.3",
     "framer-motion": "^11.11.1",
     "lucide-react": "^0.446.0",
     "next": "^14.2.14",
@@ -25,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.26.2",
     "postcss": "^8",
     "shadcn-ui": "^0.9.2",
     "tailwindcss": "^3.4.1",
