--- a/package.json
+++ b/package.json
@@ -14,21 +14,28 @@
     "@clerk/elements": "^0.17.1",
     "@clerk/nextjs": "^6.0.2",
     "@clerk/themes": "^2.1.39",
+    "@gsap/react": "^2.1.1",
     "@neondatabase/serverless": "^0.10.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-three/drei": "^9.115.0",
+    "@react-three/fiber": "^8.17.10",
+    "@react-three/postprocessing": "^2.16.3",
+    "@types/three": "^0.169.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.3",
     "framer-motion": "^11.11.1",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.446.0",
     "next": "^14.2.14",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.170.0"
   },
   "devDependencies": {
     "@types/node": "^20",
