--- a/package.json
+++ b/package.json
@@ -22,18 +22,20 @@
     "@react-three/fiber": "^8.17.10",
     "@react-three/postprocessing": "^2.16.3",
     "@types/three": "^0.169.0",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.3",
-    "framer-motion": "^11.11.1",
+    "framer-motion": "^11.11.11",
     "gsap": "^3.12.5",
     "lucide-react": "^0.446.0",
     "next": "^14.2.14",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.5.2",
+    "simplex-noise": "^4.0.3",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.170.0"
   },
